--- a/api/package.json
+++ b/api/package.json
@@ -7,17 +7,26 @@
     "build-server": "tsc",
     "build": "tsc",
     "start": "node lib/index.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/index.js\""
+    "dev": "concurrently \"npx tsc --watch\" \"node --watch lib/index.js\""
   },
   "author": "aman",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
-    "@types/node": "^20.5.7",
+    "@types/node": "^20.5.9",
+    "@types/uuid": "^9.0.2",
+    "prisma": "^5.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@prisma/client": "^5.2.0",
+    "@reclaimprotocol/reclaim-sdk": "^4.8.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongodb": "^6.0.0",
+    "uuid": "^9.0.0"
   }
 }
