--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,13 @@
     "@emotion/react": "^11.11.1",
     "@mantine/core": "^6.0.19",
     "@mantine/hooks": "^6.0.19",
+    "@tabler/icons-react": "^2.34.0",
+    "dayjs": "^1.11.9",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite-plugin-svgr": "^3.2.0",
+    "wouter": "^2.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
