--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "whistleblower backend",
   "main": "lib/index",
   "scripts": {
-    "build-server": "tsc && npx prisma db push",
+    "build-server": "tsc",
     "build": "tsc",
     "start": "node lib/index.js",
     "dev": "concurrently \"npx tsc --watch\" \"node --watch lib/index.js\""
@@ -16,12 +16,10 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.9",
     "@types/uuid": "^9.0.2",
-    "prisma": "^5.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@prisma/client": "^5.2.0",
     "@reclaimprotocol/reclaim-sdk": "^4.8.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
