--- a/api/.env
+++ b/api/.env
@@ -1,2 +1,4 @@
 PORT=8000
-DATABASE_URL="mongodb+srv://aman:Aman%404064@cluster0.fzvt9uq.mongodb.net/whistleBlower?retryWrites=true&w=majority"
+DATABASE_URL=mongodb+srv://aman:Aman%404064@cluster0.fzvt9uq.mongodb.net/whistleBlower?retryWrites=true&w=majority
+
+
