--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@mantine/core": "^6.0.19",
-    "@mantine/hooks": "^6.0.19",
+    "@mantine/core": "^6.0.21",
+    "@mantine/hooks": "^6.0.21",
+    "@tabler/icons": "^2.35.0",
     "@tabler/icons-react": "^2.34.0",
     "dayjs": "^1.11.9",
     "qrcode.react": "^3.1.0",
