--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "@mantine/core": "^6.0.21",
     "@mantine/hooks": "^6.0.21",
     "@tabler/icons": "^2.35.0",
