--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
   "author": "aman",
   "license": "ISC",
   "devDependencies": {
+    "@types/bad-words": "^3.0.1",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.9",
@@ -21,6 +22,7 @@
   },
   "dependencies": {
     "@reclaimprotocol/reclaim-sdk": "^5.1.1",
+    "bad-words": "^3.0.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
